fix carousal overflow

--- a/src/assets/scss/carousal.scss
+++ b/src/assets/scss/carousal.scss
@@ -60,6 +60,7 @@ div.carousal-slide:nth-child(4) {
 
 .carousal {
 	position: relative;
+	overflow: hidden;
 }
 
 .carousal-controlls {
